<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="197dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/text_titulo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            app:srcCompat="@drawable/both_sides_star_wars" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/resul"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="buttonResult"
            android:text="@string/btn_num_equals" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_3" />

            <Button
                android:id="@+id/button_sum"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:onClick="operationButton"
                android:text="@string/btn_num_sum" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_6" />

            <Button
                android:id="@+id/button_res"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="operationButton"
                android:text="@string/btn_num_sus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_9" />

            <Button
                android:id="@+id/button_mul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="operationButton"
                android:text="@string/btn_num_mul" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numPressed"
                android:text="@string/btn_num_0" />

            <Button
                android:id="@+id/button."
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="pointButton"
                android:text="@string/btn_num_." />

            <Button
                android:id="@+id/button_erase"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="deleteButton"
                android:text="@string/btn_num_era" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:onClick="operationButton"
                android:text="@string/btn_num_div" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>